network-tile: fix alignment of icon

--- a/app/client/stylesheets/components/pu-networktile.sass
+++ b/app/client/stylesheets/components/pu-networktile.sass
@@ -9,7 +9,7 @@
 
     .pu-sub-figurecontainer
         display: table-cell
-        vertical-align: top
+        vertical-align: middle
 
     figure
         width: 16px
